--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'net.dv8tion:JDA:4.1.1_110'
+    compile 'org.slf4j:slf4j-nop:1.7.25'
     implementation 'com.google.code.gson:gson:2.8.6'
 }
