--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,16 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
+jar{
+    manifest{
+        attributes(
+                'Main-Class':'Main'
+        )
+    }
+}
+
 group 'org.shiki'
 version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -15,7 +21,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'net.dv8tion:JDA:4.1.1_110'
+    compile 'net.dv8tion:JDA:4.2.0_168'
     compile 'org.slf4j:slf4j-nop:1.7.25'
     implementation 'com.google.code.gson:gson:2.8.6'
 }
